fix white text in intro in dark mode

--- a/public_html/assets/scss/nf-core-dark.scss
+++ b/public_html/assets/scss/nf-core-dark.scss
@@ -222,3 +222,11 @@ blockquote a {
 .badge.bg-primary {
   background-color: $primary-alt;
 }
+
+.homepage-intro {
+  color: $white-alt;
+  .text-white {
+    color: $white-alt;
+
+  }
+}
